@@ -1,5 +1,6 @@
 --[[--
-	by ALA 
+	by ALA
+	当我写这个模块的时候，从来没有料到雷火的一套组合拳催生了那么多拍卖插件......
 --]]--
 ----------------------------------------------------------------------------------------------------
 local __addon, __private = ...;
