@@ -17,44 +17,33 @@
 
 	MT.RegisterOnAddOnLoaded(ADDON_NAME, function()
 		--****	Define other methods of mod. Those to do after addon loaded. (hot-plug)
+		--	拍卖插件加载后的行为		
 		MT.FireCallback("AUCTION_MOD_LOADED", mod);
 	end);
 --]==]
 
 --[==[
-	MT.FireCallback("USER_EVENT_SPELL_DATA_LOADED");	--	Fire when data of all spells is cached.
-	MT.FireCallback("USER_EVENT_ITEM_DATA_LOADED");		--	Fire when data of all items is cached.
-	MT.FireCallback("USER_EVENT_RECIPE_LIST_UPDATE");	--	Fire when skill list updated or changed.
+	MT.FireCallback("USER_EVENT_SPELL_DATA_LOADED");	--	Fire when data of all spells is cached.		--	所有商业技能相关的技能信息缓存完成后触发
+	MT.FireCallback("USER_EVENT_ITEM_DATA_LOADED");		--	Fire when data of all items is cached.		--	所有商业技能相关的物品信息缓存完成后触发
+	MT.FireCallback("USER_EVENT_RECIPE_LIST_UPDATE");	--	Fire when skill list updated or changed.	--	配方列表更新后触发
 
 	MT.FireCallback(
 		"AUCTION_MOD_LOADED",
 		{
 		--	must
 			function F_QueryPriceByID(id, num)				return AHPrice;			--	nilable			--	must
-			alias	query_ah_price_by_id
 
 		--	optional.
-			function F_OnDBUpdate(callback)					--	callback when price of new item add or refresh
-			alias	add_cache_callback
-
-			function F_QueryPriceByName(name, num)			return AHPrice;			--	nilable			--	not used actually
-			alias	query_ah_price_by_name
+			-- function F_OnDBUpdate(callback)					--	callback when price of new item add or refresh	--	当拍卖插件的价格数据更新
+			-- function F_QueryPriceByName(name, num)			return AHPrice;			--	nilable			--	not used actually
 
 		--	optional. built-in alternative method declared in AuctionBase.lua. Define here will override the build-in methods.
+		--	可选。 alaTradeSkill内置以下函数。在此定义将覆盖内置函数
 			function F_QueryVendorPriceByLink(link, num)	return VendorPrice;		--	nilable
-			alias	get_material_vendor_price_by_link
-
 			function F_QueryVendorPriceByID(id, num)		return VendorPrice;		--	nilable
-			alias	get_material_vendor_price_by_id
-
 			function F_QueryVendorPriceByName(name, num)	return VendorPrice;		--	nilable
-			alias	get_material_vendor_price_by_name
-
 			function F_QueryNameByID(id)					return name;			--	nilable
-			alias	query_name_by_id
-
 			function F_QueryQualityByID(id)					return quality;			--	nilable
-			alias	query_quality_by_id
 		}
 	);
 	MT.FireCallback(
