@@ -1,3 +1,6 @@
+2026-01-06
+EasyAuction module update
+
 2025-12-20
 GF_Auction support
 
